# Test-Packaging

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: formatting.yml  linting.yml  presubmit.yml
cmake/: ProjectOwnerPackageConfig.cmake  ProjectOwnerPackaging.cmake  ProjectOwnerPackagingDEB.cmake  SphinxInDisguise.cmake
docs/: CMakeLists.txt  index.md.in
include/: Useful.hpp
src/: CMakeLists.txt  Capitalizer.cpp  DefaultLocale.hpp  Useful.cpp
tests/: CMakeLists.txt
